tdf#128460 import SwInputField from DOCX FILLIN

Actually the whole FILLIN handling is not that correct, because
the value can actually be formatted in any way in Word, as it's
just defined as a range of runs with formating, while Writer just
applies the character formatitng to the whole field.

But this at least allows for a round trip of the exported Writer
type input field after commit 62aaaad156ef ("tdf#125103 Writer:
input fields will be exported to docx") changed this.

Change-Id: I6389b4a2ff9d2b62e1e4a00f1c1e112c199377b5
Regression-from: 62aaaad156ef0daccd2680161ef8b9b99d8a7bc0
Reviewed-on: https://gerrit.libreoffice.org/81686
Tested-by: Jenkins
Reviewed-by: Jan-Marek Glogowski <glogow@fbihome.de>
(cherry picked from commit 5e279f175289234b91f272bbbf48e70315fff5ac)